# osml-model-runner

./: .checkov.yaml  .coveragerc  .dockerignore  .fortify.yaml  .gitignore  .gitlab-ci-aws.yml  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Config  Dockerfile  GUIDE_FOR_MODEL_DEVELOPERS.md  LICENSE.txt  METRICS_AND_DASHBOARDS.md  MODELRUNNER_API.md  Makefile  NOTICE  README.md  SCHEDULING_AND_THROTTLING.md  camUpstream.yaml  docker_local_build.sh  environment-py313.yml  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  run_mr.sh  setup.cfg  setup.py  tox.ini  vulnerability-allowlist.yml
.github/: deployment.github.json.example
.github/codebuild/: build.yml  destroy.yml  integration_test.yml
.github/workflows/: build-test-destroy.yml  build.yml  check-pending-workflow.yml  deploy.yml  destroy.yml  docker.yml  docs.yml  notify.yml  pr-checks.yml  pypi.yml  release.yml  run-integration-tests.yml  slack-notify.yml  tox.yml
.gitlab/: README.md  aws.gitlab-ci.yml  build-dep.gitlab-ci.yml  security.gitlab-ci.yml  uc.gitlab-ci.yml  xc.gitlab-ci.yml
.gitlab/aws/: .gitlab-ci.yml  .hidden.gitlab-ci.yml  .overrides.gitlab-ci.yml
.gitlab/common/: current-tag.gitlab-ci.yml  ecs-redeploy.gitlab-ci.yml  kaniko-build.gitlab-ci.yml  release.gitlab-ci.yml  templates.gitlab-ci.yml  unit-tests.gitlab-ci.yml
.gitlab/green/: .gitlab-ci.yml
.gitlab/orange/: .gitlab-ci.yml  .hidden.gitlab-ci.yml
.gitlab/pipelines/: feature-branch.gitlab-ci.yml  kaniko-release.gitlab-ci.yml
.kiro/specs/: README.md
.kiro/steering/: code-conventions-python.md  design-documents.md  project-structure.md  tox-testing-guidelines.md
cdk/: .eslintrc.js  .gitignore  README.md  cdk.json  eslint.config.mjs  jest.config.js  package-lock.json  package.json  tsconfig.json
cdk/lib/: integration-test-stack.ts  model-runner-stack.ts  network-stack.ts  osml-model-runner-stack.ts  test-imagery-stack.ts  test-models-stack.ts
cdk/osml-model-validation-tool/: .gitignore  README.md  cdk.json  jest.config.js  package-lock.json  package.json  tsconfig.json
cdk/test/: integration-test-stack.test.ts  load-deployment.test.ts  model-runner-stack.test.ts  network-stack.test.ts  test-imagery-stack.test.ts  test-models-stack.test.ts  test-utils.ts
conda/: model-runner-py311.yml  model-runner.yml  test-models-py310.yml  test-models-py311.yml  tox.yml
configuration/: Dockerfile.template
doc/: conf.py  index.rst
docker/: Dockerfile  Dockerfile.model-runner  Dockerfile.mr_container  Dockerfile.pass_through  Dockerfile.rebake  Dockerfile.ref  Dockerfile.test-models  README.md  oversight-modelrunner.Dockerfile
extensions/: README.md  model-runner-extensions-patching-explained.md  setup.py
extensions/docs/: async_endpoint_guide.md  extension_registry_guide.md
extensions/test/: requirements-test.txt  test_async_sm_builder.py  test_async_sm_detector.py  test_enhanced_factory.py  test_integration.py
extensions/tests/: test_async_sm_builder.py  test_async_sm_detector.py  test_enhanced_factory.py  test_enhanced_model_runner.py  test_enhanced_region_handler.py  test_enhanced_region_handler_async.py  test_enhanced_tile_worker.py  test_enhanced_tile_worker_utils.py
oversightmr/: detection_service.py  feature_table.py  image_utils.py  job_queue.py  job_table.py  model_runner.py  tile_worker.py  work_queue.py
oversightmr/metrics/: __init__.py  metrics_context.py  metrics_scope.py  metrics_state.py  metrics_utils.py  metrics_worker.py
scripts/: delete_all_features.py  describe_image.py  local_shell.sh  local_test.sh  mr_validation_tool_update_ecs_images.sh  queue_images_in_s3.py  requirements-scripts.txt  run_container.sh  send_create_requests.py  summarize_image.py  update_cluster.sh
scripts/bash/: autogen.sh  docker_bats_build.sh  ecr_push.sh  install_gdal_local_al2.sh  local_shell.sh  local_test.sh  run_mr.sh  (+1 more)
test/: config.py  configuration.py  conftest.py  delete_all_features.py  queue_images_in_s3.py  requirements-test.txt  test_api.py  test_app.py  test_aws_model_runner.py  test_aws_oversightml_model_runner.py  test_detection_service.py  test_end_to_end.py  test_feature_helper.py  test_feature_table.py  test_gdal_config.py  test_gdal_helper.py  test_gdal_utils.py  test_georeference.py  test_image_helper.py  test_image_utils.py  test_model_runner.py  test_model_runner_api.py  test_timer.py  types.py
(+613 files in other folders)
