[metadata]
name = osml-model-runner
version = 2.3.0
description = Application to run large scale imagery against AI/ML models
long_description = file: README.md
long_description_content_type = text/markdown
author = Amazon Web Services
author_email = aws-osml-admin@amazon.com
license =
    MIT No Attribution

    Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.

    Permission is hereby granted, free of charge, to any person obtaining a copy of
    this software and associated documentation files (the "Software"), to deal in
    the Software without restriction, including without limitation the rights to
    use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of
    the Software, and to permit persons to whom the Software is furnished to do so.

    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
    IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS
    FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR
    COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
    IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
    CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
project_urls =
    Source = https://github.com/aws-solutions-library-samples/osml-model-runner
    Tracker = https://github.com/aws-solutions-library-samples/osml-model-runner/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
zip_safe = False
package_dir=
    =src
packages=find_namespace:
python_requires = >=3.11
include_package_data = True

install_requires =
    osml-imagery-toolkit>=1.4.2
    numpy>=1.24.4
    shapely>=2.0.2
    aws-embedded-metrics==3.2.0
    python-json-logger>=2.0.2
    boto3==1.35.36
    botocore==1.35.36
    setuptools==80.9.0
    cachetools==5.3.2
    geojson>=3.1.0
    scikit-optimize>=0.9.0
    pyproj>=3.6.1
    scipy>=1.14.0
    argparse==1.4.0
    dacite==1.8.1
    ensemble-boxes==1.0.9
    codeguru-profiler-agent==1.2.5
    defusedxml>=0.7.1
    requests==2.32.4
    urllib3==2.5.0

[options.packages.find]
where = src
exclude =
    test

[options.package_data]
package_data =
    = ["py.typed"]

[options.extras_require]
gdal =
    gdal>=3.8.3
