[metadata]
name = osml-model-runner
version = 2.3.0
description = Application to run large scale imagery against AI/ML models
long_description = file: README.md
long_description_content_type = text/markdown
author = Amazon Web Services
author_email = aws-osml-admin@amazon.com
license = Apache-2.0
project_urls =
    Source = https://github.com/aws-solutions-library-samples/osml-model-runner
    Tracker = https://github.com/aws-solutions-library-samples/osml-model-runner/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
zip_safe = False
package_dir=
    =src
packages=find_namespace:
python_requires = >=3.10
include_package_data = True

install_requires =
    osml-imagery-toolkit>=1.3.0
    # Keep numpy constrained for older runtimes to avoid pip selecting numpy 2.x
    # when other compiled deps (e.g., scipy/numba) still require numpy<2.
    numpy>=1.24.4,<2.0.0;python_version<'3.13'
    # Python 3.13 requires numpy 2.x (no numpy 1.x wheels).
    numpy>=2.0.0,<3.0.0;python_version>='3.13'
    shapely>=2.0.2
    aws-embedded-metrics==3.2.0
    python-json-logger>=2.0.0
    boto3==1.34.28
    botocore==1.34.28
    setuptools>=69.0.3
    cachetools==5.3.2
    geojson>=3.1.0
    scikit-optimize>=0.9.0
    pyproj>=3.6.1
    scipy>=1.12.0,<1.14.0;python_version<'3.13'
    scipy>=1.13.0;python_version>='3.13'
    argparse==1.4.0
    dacite==1.8.1
    codeguru-profiler-agent==1.2.4
    defusedxml>=0.7.1
    requests>=2.32.0,<3.0.0
    numba>=0.60.0
    json-logging==1.3.0
    flask==2.3.3
    waitress==2.1.2
    matplotlib==3.10.7
    opencv-python-headless>=4.10.0.0,<4.13.0.0;python_version<'3.13'
    opencv-python-headless>=4.13.0.90,<5.0.0;python_version>='3.13'

[options.packages.find]
where = src
exclude =
    test

[options.package_data]
package_data =
    = ["py.typed"]

[options.extras_require]
gdal =
    gdal>=3.8.3
test =
    tox
